--- a/css/main.css
+++ b/css/main.css
@@ -130,14 +130,14 @@ a:hover {
   background-color: transparent;
   color: #b6bac4;
   font-size: 16px;
-	cursor: pointer;
+  cursor: pointer;
   transition: 0.3s all ease;
 }
 
 .footer-career--button:hover {
-	background-color: #fff;
-	color: #151525;
-	border: 1px solid #fff;
+  background-color: #fff;
+  color: #151525;
+  border: 1px solid #fff;
 }
 
 
@@ -178,13 +178,111 @@ a:hover {
 }
 
 .icons a {
-	display: inline-block;
-	font-size: 25px;
+  display: inline-block;
+  font-size: 25px;
 }
+
 .icons a:nth-child(1) {
   margin-right: 15px;
 }
 
 .icons a:nth-child(2) {
   margin-right: 15px;
+}
+
+.footer-sertificate {
+  font-family: "Open Sans";
+  font-size: 14px;
+  color: #b6bac4;
+}
+
+@media (max-width: 1024px) {
+
+  .footer-top {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .wrapper-cooperate {
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0;
+  }
+
+  .footer-company {
+    width: 100%;
+    text-align: center;
+  }
+
+  .wrapper-cooperate {
+    display: block;
+    width: 370px;
+    margin: 0 auto;
+    /* flex-wrap: nowrap;
+    text-align: center;
+    align-items: center;
+    padding-bottom: 0;
+    margin-top: 30px; */
+  }
+
+  .footer-cooperation {
+    text-align: center;
+    width: 370px;
+    margin: 0 auto;
+    margin-top: 30px;
+  }
+
+  .footer-pressсenter {
+    margin-left: 0;
+    margin-top: 30px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .footer-career {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  .footer-contacts {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  .icons {
+    position: static;
+  }
+
+  .footer-bottom {
+    margin: 0 auto;
+    margin-top: 30px;
+    width: 370px;
+  }
+
+  .footer-sertificate {
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 13px;
+  }
+
+  .footer-bottom-right {
+    text-align: right;
+  }
+
+  .footer-bottom-right a {
+    margin-top: 0;
+  }
+
+  .footer-bottom {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer-career--button {
+    margin-top: 50px;
+  }
 }
