--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,15 @@
 @font-face {
-  font-family: "Open Sans";
-  font-display: swap;
-  src: url('../fonts/Firasanslight.woff2') format("woff2"),
-    url('../fonts/Firasanslight.woff') format("woff");
+  font-family: 'Open Sans';
   font-style: normal;
+
+  font-display: swap;
+  src: url('../fonts/Firasanslight.woff2') format('woff2'),
+    url('../fonts/Firasanslight.woff') format('woff');
 }
 
 body {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
+
   color: b6bac4;
 }
 
@@ -23,25 +25,32 @@ li {
 }
 
 a {
-  text-decoration: none;
   font-size: 14px;
+
+  text-decoration: none;
+
   color: #b6bac4;
 }
 
 h3 {
-  color: #fff;
   font-size: 20px;
+
+  color: #fff;
 }
 
 span {
-  display: block;
-  margin-top: 3px;
-  color: #575e6c;
   font-size: 14px;
+
+  display: block;
+
+  margin-top: 3px;
+
+  color: #575e6c;
 }
 
 p {
   font-size: 14px;
+
   color: #b6bac4;
 }
 
@@ -51,8 +60,10 @@ ul {
 
 a {
   display: block;
+
   margin-top: 13px;
-  transition: 0.3s all ease;
+
+  transition: .3s all ease;
 }
 
 a:hover {
@@ -62,15 +73,16 @@ a:hover {
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
+
   background-color: #151525;
 }
 
 .container {
-  margin: 0 auto;
+  box-sizing: border-box;
   max-width: 960px;
+  margin: 0 auto;
   padding-right: 15px;
   padding-left: 15px;
-  box-sizing: border-box;
 }
 
 .footer-top {
@@ -79,15 +91,18 @@ a:hover {
 
 .wrapper-cooperate {
   display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
+
+  width: 370px;
   margin-left: 30px;
   padding-bottom: 18px;
-  width: 370px;
+
+  flex-wrap: wrap;
+  align-content: space-between;
 }
 
 .footer-bottom {
   display: flex;
+
   justify-content: space-between;
 }
 
@@ -100,8 +115,8 @@ a:hover {
 }
 
 .footer-pressсenter {
-  margin-left: 30px;
   width: 130px;
+  margin-left: 30px;
 }
 
 .footer-career {
@@ -111,8 +126,9 @@ a:hover {
 
 .footer-contacts {
   position: relative;
-  margin-left: 30px;
+
   width: 130px;
+  margin-left: 30px;
 }
 
 .footer-contacts p:first-of-type {
@@ -124,26 +140,30 @@ a:hover {
 }
 
 .footer-career--button {
+  font-size: 16px;
+
   margin-top: 80px;
   padding: 15px 39px;
+
+  cursor: pointer;
+  transition: .3s all ease;
+
+  color: #b6bac4;
   border: 1px solid #b6bac4;
   background-color: transparent;
-  color: #b6bac4;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s all ease;
 }
 
 .footer-career--button:hover {
-  background-color: #fff;
   color: #151525;
   border: 1px solid #fff;
+  background-color: #fff;
 }
 
 
 .footer-bottom {
   margin-top: 30px;
   padding-top: 45px;
+
   border-top: solid 1px #b6bac4;
 }
 
@@ -157,13 +177,16 @@ a:hover {
 
 .wrapper-mobile p {
   display: block;
+
   margin-top: 13px;
 }
 
 .footer-bottom-right {
   display: flex;
-  justify-content: space-between;
+
   width: 370px;
+
+  justify-content: space-between;
 }
 
 .footer-bottom-right svg {
@@ -172,14 +195,16 @@ a:hover {
 
 .icons {
   position: absolute;
-  bottom: 0;
   right: 0;
+  bottom: 0;
+
   color: #666875;
 }
 
 .icons a {
-  display: inline-block;
   font-size: 25px;
+
+  display: inline-block;
 }
 
 .icons a:nth-child(1) {
@@ -191,31 +216,36 @@ a:hover {
 }
 
 .footer-sertificate {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 14px;
+
   color: #b6bac4;
 }
 
 @media (max-width: 1024px) {
-
   .footer-top {
     flex-direction: column;
+
     align-items: center;
   }
 
   .wrapper-cooperate {
     flex-direction: column;
-    align-items: center;
+
     margin-left: 0;
+
+    align-items: center;
   }
 
   .footer-company {
     width: 100%;
+
     text-align: center;
   }
 
   .wrapper-cooperate {
     display: block;
+
     width: 370px;
     margin: 0 auto;
     /* flex-wrap: nowrap;
@@ -226,30 +256,34 @@ a:hover {
   }
 
   .footer-cooperation {
-    text-align: center;
     width: 370px;
     margin: 0 auto;
     margin-top: 30px;
+
+    text-align: center;
   }
 
   .footer-pressсenter {
-    margin-left: 0;
-    margin-top: 30px;
     width: 100%;
+    margin-top: 30px;
+    margin-left: 0;
+
     text-align: center;
   }
 
   .footer-career {
     width: 100%;
-    margin-left: 0;
     margin-top: 30px;
+    margin-left: 0;
+
     text-align: center;
   }
 
   .footer-contacts {
     width: 100%;
-    margin-left: 0;
     margin-top: 30px;
+    margin-left: 0;
+
     text-align: center;
   }
 
@@ -258,15 +292,16 @@ a:hover {
   }
 
   .footer-bottom {
+    width: 370px;
     margin: 0 auto;
     margin-top: 30px;
-    width: 370px;
   }
 
   .footer-sertificate {
-    text-align: center;
     margin: 0 auto;
     margin-top: 13px;
+
+    text-align: center;
   }
 
   .footer-bottom-right {
@@ -279,6 +314,7 @@ a:hover {
 
   .footer-bottom {
     display: flex;
+
     justify-content: space-between;
   }
 
@@ -288,9 +324,17 @@ a:hover {
 }
 
 @media (max-width: 425px) {
+  .footer-sertificate {
+    display: none;
+  }
+
+  ul {
+    display: none;
+  }
 
   .wrapper-cooperate {
     width: 100%;
+    padding-bottom: 0;
   }
 
   .footer-cooperation {
@@ -309,4 +353,7 @@ a:hover {
     flex-direction: column;
   }
 
+  .show {
+    display: block;
+  }
 }
